Fix typing error on the home page

--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p>Welcome to the oficial Space Game site!</p>
+        <p>Welcome to the official Space Game site!</p>
     </div>
 </section>
 <section class="download">
@@ -56,48 +56,48 @@
                 @{
                     if (Model.Scores.Count() == 0)
                     {
-                        <div class="row" style="margin-left: 5px; margin-top: 20px;">No scores match your selection.</div>
+                                <div class="row" style="margin-left: 5px; margin-top: 20px;">No scores match your selection.</div>
                     }
 
                     int rank = ((Model.Page - 1) * Model.PageSize) + 1;
                     foreach (var score in Model.Scores)
                     {
-                        <div class="row high-score align-items-center">
-                            <div class="col-sm-1 score-data">
+                                <div class="row high-score align-items-center">
+                                    <div class="col-sm-1 score-data">
                                 @(rank++).
-                            </div>
-                            <div class="col-sm-4 score-data">
-                                <div style="text-align: left; margin-left: 100px;">
-                                    <partial name="Profile" model="new ProfileViewModel { Profile = score.Profile, Rank = (rank - 1).ToString() }" />
-                                    <a href="" data-toggle="modal" data-target="#profile-modal-@((rank - 1).ToString())">
-                                        <img class="avatar" src="@score.Profile.AvatarUrl" alt="@score.Profile.UserName">
-                                        <div class="score-data username">
+                                    </div>
+                                    <div class="col-sm-4 score-data">
+                                        <div style="text-align: left; margin-left: 100px;">
+                                            <partial name="Profile" model="new ProfileViewModel { Profile = score.Profile, Rank = (rank - 1).ToString() }" />
+                                            <a href="" data-toggle="modal" data-target="#profile-modal-@((rank - 1).ToString())">
+                                                <img class="avatar" src="@score.Profile.AvatarUrl" alt="@score.Profile.UserName">
+                                                <div class="score-data username">
                                             @score.Profile.UserName
+                                                </div>
+                                            </a>
                                         </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-2 score-data">
+                                    </div>
+                                    <div class="col-sm-2 score-data">
                                 @score.Score.GameMode
-                            </div>
-                            <div class="col-sm-3 score-data">
+                                    </div>
+                                    <div class="col-sm-3 score-data">
                                 @score.Score.GameRegion
-                            </div>
-                            <div class="col-sm-2 score-data">
+                                    </div>
+                                    <div class="col-sm-2 score-data">
                                 @score.Score.HighScore.ToString("N0")
-                            </div>
-                        </div>
+                                    </div>
+                                </div>
                     }
                 }
                 <nav aria-label="...">
                     <ul class="pagination">
                         @if (string.IsNullOrEmpty(Model.PrevLink))
                         {
-                            <li class="disabled"><span aria-hidden="true">&laquo;</span></li>
+                                <li class="disabled"><span aria-hidden="true">&laquo;</span></li>
                         }
                         else
                         {
-                            <li class=""><a href="@Model.PrevLink" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                                <li class=""><a href="@Model.PrevLink" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                         }
                         @{
                             var totalPages = Model.TotalResults / Model.PageSize;
@@ -108,21 +108,21 @@
 
                             for (int i = 1; i <= totalPages; i++)
                             {
-                                <li class="@(i == Model.Page ? "active" : null)">
-                                    <a href="@($"/?page={i}&pageSize={@Model.PageSize}&mode={@Model.SelectedMode}&region={@Model.SelectedRegion}")#leaderboard">
+                                        <li class="@(i == Model.Page ? "active" : null)">
+                                            <a href="@($"/?page={i}&pageSize={@Model.PageSize}&mode={@Model.SelectedMode}&region={@Model.SelectedRegion}")#leaderboard">
                                         @i
-                                        <span class="sr-only">(current)</span>
-                                    </a>
-                                </li>
+                                                <span class="sr-only">(current)</span>
+                                            </a>
+                                        </li>
                             }
                         }
                         @if (string.IsNullOrEmpty(Model.NextLink))
                         {
-                            <li class="disabled"><span aria-hidden="true">&raquo;</span></li>
+                                <li class="disabled"><span aria-hidden="true">&raquo;</span></li>
                         }
                         else
                         {
-                            <li class=""><a href="@Model.NextLink" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                                <li class=""><a href="@Model.NextLink" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
                         }
                     </ul>
                 </nav>
@@ -135,24 +135,24 @@
                         <ul>
                             @if (string.IsNullOrEmpty(Model.SelectedMode))
                             {
-                                <li class="filter-active">All</li>
+                                    <li class="filter-active">All</li>
                             }
                             else
                             {
-                                <li class="filter-button">
-                                    <a class="" href="/?region=@Model.SelectedRegion#leaderboard">All</a>
-                                </li>
+                                    <li class="filter-button">
+                                        <a class="" href="/?region=@Model.SelectedRegion#leaderboard">All</a>
+                                    </li>
                             }
                             @{
                                 foreach (var mode in Model.GameModes)
                                 {
                                     @if (mode.Equals(Model.SelectedMode))
                                     {
-                                        <li class="filter-active">@mode</li>
+                                                    <li class="filter-active">@mode</li>
                                     }
                                     else
                                     {
-                                        <li class="filter-button"><a href="/?mode=@mode&region=@Model.SelectedRegion#leaderboard">@mode</a></li>
+                                                    <li class="filter-button"><a href="/?mode=@mode&region=@Model.SelectedRegion#leaderboard">@mode</a></li>
                                     }
                                 }
                             }
@@ -164,11 +164,11 @@
                         <ul>
                             @if (string.IsNullOrEmpty(Model.SelectedRegion))
                             {
-                                <li class="filter-active">All</li>
+                                    <li class="filter-active">All</li>
                             }
                             else
                             {
-                                <li class="filter-button"><a href="/?mode=@Model.SelectedMode#leaderboard">All</a></li>
+                                    <li class="filter-button"><a href="/?mode=@Model.SelectedMode#leaderboard">All</a></li>
                             }
 
                             @{
@@ -176,11 +176,11 @@
                                 {
                                     @if (region.Equals(Model.SelectedRegion))
                                     {
-                                        <li class="filter-active">@region</li>
+                                                    <li class="filter-active">@region</li>
                                     }
                                     else
                                     {
-                                        <li class="filter-button"><a href="/?mode=@Model.SelectedMode&region=@region#leaderboard">@region</a></li>
+                                                    <li class="filter-button"><a href="/?mode=@Model.SelectedMode&region=@region#leaderboard">@region</a></li>
                                     }
                                 }
                             }
